# GenQ

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: analysis_config.yaml  config.yaml  eval_config.yaml  fast_eval_config.yaml  test_config.yaml
data/: data_prep.ipynb  data_prep.py
eval/: analyze_data.ipynb  checkpoint_eval.py  ds_eval.py  eval_config.yaml  result_analysis.ipynb
modules/: utils.py
modules/eval/: model_eval.py  result_analysis.py  results_analysis.py
modules/train/: config.py  datapreprocess.py  eval.py  train.py
train/: config.py  config.yaml  datapreprocess copy.py  datapreprocess.py  eval.py  printer_callback.py  prod2query_finetune copy.py  prod2query_finetune.py  test_config.yaml  train.py  utils.py
ui/: README.md  app.py  requirements.txt
