[tool.poetry]
name = "product2query"
version = "0.1.0"
description = ""
authors = ["Milutin-S <studen.m98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
torch = "^2.5.1"
datasets = "^3.2.0"
transformers = {extras = ["torch"], version = "^4.48.3"}
evaluate = "^0.4.3"
nltk = "^3.9.1"
loguru = "^0.7.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
accelerate = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
